--- a/web.html
+++ b/web.html
@@ -1,4 +1,4 @@
 <h1>My first webpage</h1>
 
 <p>Bad test</p>
-<p>My Fav color is <span style="color:red;">red</span></p>
+<p>My Fav color is <<span style="color:red;">red</span></p>
