--- a/index.html
+++ b/index.html
@@ -19,21 +19,20 @@
   		<li>He's a Bad ass</li>
   		<li>Cute</li>
   	</ol>
-  	<img class="big-image"src="img/baby-taz.gif">
+  	<img class="big-image"src="img/taz.gif">
   	<p class="caption">Baby Taz</p>
 
   	<h2>Taz's Friends</h2>
   	<ul>
-  		<li><a href="https://looneytunes.fandom.com/wiki/Bugs_Bunny" target="_blank" title="Bugs Bunny Wiki"></a>  Bugs Bunny</li>
-  		<li><a href="https://looneytunes.fandom.com/wiki/Daffy_Duck"target="_blank" title="Daffy duck wiki"></a> Daffy duck</li>
-  		<li><a href="https://looneytunes.fandom.com/wiki/Marvin_the_Martian" target="_blank" title="Marvin's wiki"></a> Marvin the martian</li>
+  		<li><a href="https://looneytunes.fandom.com/wiki/Bugs_Bunny" target="_blank" title="Bugs Bunny Wiki"> Bugs Bunny</a> </li>
+  		<li><a href="https://looneytunes.fandom.com/wiki/Daffy_Duck"target="_blank" title="Daffy duck wiki"> Daffy duck</a></li>
+  		<li><a href="https://looneytunes.fandom.com/wiki/Marvin_the_Martian" target="_blank" title="Marvin's wiki"> Marvin the martian</a></li>
 
   	</ul>
   </div>
   <footer>
   	<ul>
   		<li>Made by Manoj</li>
-  		<li>Made in 2019</li>
   		<li>&copy; 2019 </li>
   	</ul>
   </footer>
